<?xml version="1.0"?>
<package format="2">
  <name>robotx_costmap_calculator</name>
  <version>0.0.0</version>
  <description>The robotx_costmap_calculator package</description>

  <maintainer email="ms.kataoka@gmail.com">masaya kataoka</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>grid_map</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>grid_map</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>grid_map</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/nodelet.xml"/>
  </export>
</package>
