<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotx_costmap_calculator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aki.grade2580@outlook.jp">asahi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>grid_map_cmake_helpers</build_depend>
  <build_depend>eigen_conversions</build_depend>
  
  <depend>ament_cmake_auto</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>gridmap_msgs</depend>
  <depend>gridmap_core</depend>
  <depend>gridmap_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>eigen</depend>
  <depend>libpcl-all-dev</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
